Bug 59340 - Evdev ignores SwapAxes/Invert for touch events
Summary: Evdev ignores SwapAxes/Invert for touch events
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-14 05:30 UTC by Peter Hutterer
Modified: 2013-01-25 01:13 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2013-01-14 05:30:41 UTC
SwapAxes and InvertX/Y is ignored for touch events.
Comment 2 Peter Hutterer 2013-01-25 01:13:57 UTC
commit 67e5376aaa62a1586fee37d610b3ad7e3b8bbcab
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Jan 14 14:45:58 2013 +1000

    Handle axis swap, calibration, and inversion for touch events (#59340)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.